# rustOS

rustOS/: Cargo.toml  buildMac.sh
rustOS/.cargo/: config.toml
rustOS/src/: gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
rustOS/tests/: basic_boot.rs  should_panic.rs  stack_overflow.rs
