[package]
name = "rust_os"
version = "0.1.0"
edition = "2018"
authors = ["Viranchee Lotia hey@viranchee.com"]

# cargo build
[profile.dev]
panic = "abort" # Disable stack unwind on panic

# cargo build --release
[profile.release]
panic = "abort" # Disable stack unwind on panic

[dependencies]
bootloader = "0.9.23"